--- a/foot/src/main/resources/templates/user/reservation/ReservationUserList.html
+++ b/foot/src/main/resources/templates/user/reservation/ReservationUserList.html
@@ -501,11 +501,11 @@
                         <div class="mb-8" id="map" style="width: 100%; height: 300px;"></div>
 
 						<!-- 마커용 데이터는 JS에서 사용할 수 있도록 hidden 요소나 dataset에 저장 -->
-						<div class="markerData" th:each="list : ${list}"
-						     th:attr="data-lat=${list.latitude}, 
-						              data-lng=${list.hardness},
-						              data-url=@{/DetailedPageUserForm(fiSeq=${list.fiSeq})}">
-						</div>
+					<div class="markerData" th:each="list1 : ${list1}"
+     th:attr="data-lat=${list1.latitude}, 
+              data-lng=${list1.hardness},
+              data-url=@{/DetailedPageUserForm(fiSeq=${list1.fiSeq})}">
+</div>
                       
                      </div>
                      </form>
